--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,41 @@
   min-height: 100vh;
 }
 
+.left-box {
+  background: #ce3129;
+  border-top: 8px solid #4f1413;
+  border-bottom: 8px solid #4f1413;
+  border-right: 4px solid #4f1413;
+  border-left: 8px solid #4f1413;
+  border-radius: 12px;
+  width: 40%;
+  min-height: 70vh;
+  padding: 30px;
+  color: #ffffff;
+}
+
+.right-box {
+  background: #ce3129;
+  border-top: 8px solid #4f1413;
+  border-bottom: 8px solid #4f1413;
+  border-right: 8px solid #4f1413;
+  border-left: 4px solid #4f1413;
+  border-radius: 12px;
+  min-height: 70vh;
+  padding: 30px 20px;
+}
+
 .left-box input {
   height: 50px;
-  width: 230px;
-  border: 8px solid #4F1413;
-  border-radius: 12px;
+  border: 8px solid #4f1413;
   color: #898989;
   font-size: 20px;
   padding: 5px 15px;
+}
+
+.left-box img {
+  background: #d9d9d9;
+  border-radius: 5px;
+  padding: 18px;
+  margin: 0 30px 20px 0;
 }
