--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,16 @@
   border-radius: 12px;
   min-height: 70vh;
   padding: 30px 20px;
+  width: 129px;
+}
+
+.right-box img { 
+  background: #d9d9d9;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 0 auto 10px auto;
 }
 
 .left-box input {
