--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
   min-height: 100vh;
 }
 
+h2.tooltip-text {
+  font-size: 1.1rem;
+  color: #f8ff8f;
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
+
 .left-box {
   background: #ce3129;
   border-top: 8px solid #4f1413;
@@ -30,13 +37,17 @@
   width: 129px;
 }
 
-.right-box img { 
+.right-box img {
   background: #d9d9d9;
   display: flex;
   justify-content: center;
   border-radius: 5px;
   padding: 5px;
   margin: 0 auto 10px auto;
+}
+
+.right-box h2.tooltip-text {
+  text-align: center;
 }
 
 .left-box input {
